[package]
name = "miau"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = { version = "0.17", features = ["spirv"] }
winit = "0.28"
tokio = { version = "1", features=["full"] }
log = "0.4"
env_logger = "0.10"
glam = "0.24"
obj-rs = "0.7"
shared = { path = "shared" }

[build-dependencies]
spirv-builder = "0.9"
