[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
miau = { path = "../miau" }
wgpu = "0.18"
glam = "0.24"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
game_shared = { path = "shared" }

[build-dependencies]
spirv-builder = "0.9"
vach = "0.4"
