[package]
name = "miau"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = { version = "0.17", features = ["spirv"] }
winit = { git = "https://github.com/rust-windowing/winit" }
pollster = "0.2"
log = "0.4"
glam = { version = "0.24", features = ["serde"] }
obj-rs = "0.7"
image = "0.24"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
erased-serde = "0.3"
bincode = "1.3"
serde_json = "1.0" # test
vach = "0.4"
shared = { path = "shared" }
macros = { path = "macros" }

[build-dependencies]
spirv-builder = "0.9"
vach = "0.4"